# ScheduleApp

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scheduleloader.cpp  scheduleloader.h  studentschedulewindow.cpp  studentschedulewindow.h  studentschedulewindow.ui  teacherschedulewindow.cpp  teacherschedulewindow.h  teacherschedulewindow.ui
